added external network to compute role

--- a/templates/roles_data.yaml
+++ b/templates/roles_data.yaml
@@ -185,6 +185,7 @@
     - InternalApi
     - Tenant
     - Storage
+    - External
   HostnameFormatDefault: '%stackname%-compute-%index%'
   # Deprecated & backward-compatible values (FIXME: Make parameters consistent)
   # Set uses_deprecated_params to True if any deprecated params are used.
